hid the final image canvas to stop overflow bug

--- a/client/src/app/app.css
+++ b/client/src/app/app.css
@@ -58,7 +58,8 @@ footer {
 }
 
 #finalCanvas {
-    visibility: hidden;
+    /* visibility: hidden; */
+    display: none;
 }
 
 @media screen and (max-width: 992px) {
